Fixed: FS#940 - Interface is squished in Google Chrome
git-svn-id: svn://svn.ispconfig.org/ispconfig3/branches/ispconfig-3.0.1.x@1434 c1a6f2c7-8504-0410-933a-a4dae0184b0a

--- a/interface/web/themes/default/css/screen/basemod.css
+++ b/interface/web/themes/default/css/screen/basemod.css
@@ -3,7 +3,7 @@
  * "Yet Another Multicolumn Layout" - (X)HTML/CSS Framework
  *
  * (en) Screen layout for YAML - ISPConfig 3: default theme
- * (de) Bildschirmlayout für YAML - ISPConfig 3: default theme
+ * (de) Bildschirmlayout fr YAML - ISPConfig 3: default theme
  *
  * @copyright       Copyright 2005-2008, Dirk Jesse
  * @license         CC-A 2.0 (http://creativecommons.org/licenses/by/2.0/),
@@ -35,7 +35,10 @@
 	
 	/* (en) Layout: width, background, borders */
 	/* (de) Layout: Breite, Hintergrund, Rahmen */
-	#page_margins { min-width: 980px; max-width: 80%; background: #fff; display: table;}
+	/*WARNING: ADded a overrode for this setting in main.tpl with javascript to target non chrome browsers,
+	This has to be changed too in case that page_margins get changed. Reason: Chrome does not support the 
+	display: table; attribute correctly*/
+	#page_margins { min-width: 980px; max-width: 80%; background: #fff;}
 	#page{ padding: 10px; }
 	
 	/* (en) Designing main layout elements */
